; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_gmdifftest.c_test_gmtime.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_gmdifftest.c_test_gmtime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @test_gmtime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_gmtime(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = call i64 @check_time(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %26

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = sub nsw i32 0, %7
  %9 = call i64 @check_time(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %26

11:                                               ; preds = %6
  %12 = load i32, i32* %2, align 4
  %13 = sext i32 %12 to i64
  %14 = mul nsw i64 %13, 1000
  %15 = trunc i64 %14 to i32
  %16 = call i64 @check_time(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %11
  %19 = load i32, i32* %2, align 4
  %20 = sub nsw i32 0, %19
  %21 = sext i32 %20 to i64
  %22 = mul nsw i64 %21, 1000
  %23 = trunc i64 %22 to i32
  %24 = call i64 @check_time(i32 %23)
  %25 = icmp ne i64 %24, 0
  br label %26

26:                                               ; preds = %18, %11, %6, %1
  %27 = phi i1 [ false, %11 ], [ false, %6 ], [ false, %1 ], [ %25, %18 ]
  %28 = zext i1 %27 to i32
  ret i32 %28
}

declare dso_local i64 @check_time(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
